--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <p><em>Tisch University Professor</em></p>
         <p>I am a Professor at <strong>Cornell University</strong></p></td>
         <p>Changed by collaborator</p>
-        <p>Changed 2 by collaborator</p>
+        <p>Changed by collaborator 2</p>
       </tr>
     </table>
     <hr>
